# signatureCalculator

./: CMakeLists.txt  README.md  main.cpp  pyIPSIG.cpp
include/: graph.h  pChrono.h  system.h
pylibs/: test.py
